[package]
name = "iroh-content-discovery"
version = "0.3.0"
edition = "2021"
description = "Content discovery for iroh, using a simple tracker protocol"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Required features for the protocol types.
#
# The protocol is using postcard, but we don't need a postcard dependency for just the type definitions
iroh-base = "0.95"
iroh-blobs = "0.97"
serde = { version = "1", features = ["derive"] }
derive_more = { version = "2", features = ["debug", "display", "from", "try_into"] }
serde-big-array = "0.5.1"
hex = "0.4.3"
anyhow = { version = "1", features = ["backtrace"] }

# Optional features for the client functionality
iroh = { version = "0.95", features = ["discovery-pkarr-dht"], optional = true }
tracing = { version = "0.1", optional = true }
postcard = { version = "1", features = ["alloc", "use-std"], optional = true }
tokio = { version = "1.44.1", optional = true }
tokio-stream = "0.1.17"
n0-future = { version = "0.3", optional = true }
futures-buffered = { version = "0.2.11", optional = true }
snafu = "0.8.6"
ed25519-dalek = "3.0.0-pre.1"

[features]
client = [
    "dep:tracing",
    "dep:postcard",
    "dep:tokio",
    "dep:n0-future",
    "dep:futures-buffered",
    "dep:iroh",
]
default = ["client"]
